--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TokoSembakoBerkah
 excludes=
 file.reference.mysql-connector-java-8.0.29.jar=D:\\java\\lib\\mysql-connector-java-8.0.29.jar
+file.reference.protobuf-java-3.19.4.jar=D:\\java\\lib\\protobuf-java-3.19.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.29.jar}
+    ${file.reference.mysql-connector-java-8.0.29.jar}:\
+    ${file.reference.protobuf-java-3.19.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
