--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+ant.customtasks.libs=JWSAntTasks
+application.title=TokoSembakoBerkah
+application.vendor=Lenovo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +34,15 @@ dist.jar=${dist.dir}/TokoSembakoBerkah.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TokoSembakoBerkah
+endorsed.classpath=\
+    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar
 excludes=
 file.reference.mysql-connector-java-8.0.29.jar=D:\\java\\lib\\mysql-connector-java-8.0.29.jar
 file.reference.protobuf-java-3.19.4.jar=D:\\java\\lib\\protobuf-java-3.19.4.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
     ${file.reference.protobuf-java-3.19.4.jar}
@@ -48,8 +54,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=11
-javac.target=11
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -75,11 +81,28 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TokoSembakoBerkah
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=true
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=tokosembakoberkah.TokoSembakoBerkah
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_11
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
